# internal/auth/models.go
@@ -1,0 +1,8 @@
+package auth
+
+type user struct {
+	ID       int
+	Username string
+	PassHash string
+	Role     string
+}
