# internal/health/dto.go
@@ -1,0 +1,6 @@
+package health
+
+type healthResponse struct {
+	Healthy bool
+	Message string `json:"message" example:"On"`
+}
