# internal/health/handler.go
@@ -1,0 +1,18 @@
+package health
+
+import (
+	"github.com/labstack/echo/v5"
+)
+
+// Health
+//
+// @Summary Health Check
+// @Description Verifica se a API está online
+// @Tags Health
+// @Produce json
+// @Success 200 {object} healthResponse
+// @Router /system/health [get]
+func health(c *echo.Context) error {
+	res := serviceHealth()
+	return c.JSON(200, res)
+}
